--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Description: The ability to tune models is important. 'tune' contains
     hyper-parameters in models, pre-processing methods, and
     post-processing steps.
 License: MIT + file LICENSE
-URL: https://github.com/tidymodels/tune,
-    https://tune.tidymodels.org/
+URL: https://tune.tidymodels.org/, https://github.com/tidymodels/tune
+BugReports: https://github.com/tidymodels/tune/issues
 Depends:
     R (>= 2.10)
 Imports:
