--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-# CODEOWNERS for rsample
+# CODEOWNERS for tune
 # https://www.tidyverse.org/development/understudies
 .github/CODEOWNERS @topepo @EmilHvitfeldt
