--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.1.6.9003
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
-    person("RStudio", role = "cph")
+    person("RStudio", role = c("cph", "fnd"))
   )
 Description: The ability to tune models is important. 'tune' contains
     functions and classes to be used in conjunction with other
@@ -12,10 +12,10 @@ Description: The ability to tune models is important. 'tune' contains
     hyper-parameters in models, pre-processing methods, and
     post-processing steps.
 License: MIT + file LICENSE
-URL: https://github.com/tidymodels/tune,
-    https://tune.tidymodels.org/
+URL: https://tune.tidymodels.org/, https://github.com/tidymodels/tune
+BugReports: https://github.com/tidymodels/tune/issues
 Depends:
-    R (>= 2.10)
+    R (>= 3.4)
 Imports:
     cli (>= 2.0.0),
     dials (>= 0.0.10),
