--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(pretty,tune_results)
 S3method(print,control_grid)
+S3method(print,control_last_fit)
 S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(size_sum,tune_results)
@@ -129,6 +130,7 @@ export(conf_bound)
 export(conf_mat_resampled)
 export(control_bayes)
 export(control_grid)
+export(control_last_fit)
 export(control_resamples)
 export(coord_obs_pred)
 export(empty_ellipses)
