changes for case weights

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,9 @@ S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
+S3method(performance_case_weights,default)
+S3method(performance_case_weights,hardhat_frequency_weights)
+S3method(performance_case_weights,hardhat_importance_weights)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
@@ -176,6 +179,7 @@ export(min_grid.rule_fit)
 export(new_iteration_results)
 export(outcome_names)
 export(parameters)
+export(performance_case_weights)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
