changes from code review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method("names<-",iteration_results)
 S3method("names<-",resample_results)
 S3method("names<-",tune_results)
 S3method(.get_fingerprint,tune_results)
+S3method(.use_case_weights_with_yardstick,default)
+S3method(.use_case_weights_with_yardstick,hardhat_frequency_weights)
+S3method(.use_case_weights_with_yardstick,hardhat_importance_weights)
 S3method(augment,last_fit)
 S3method(augment,resample_results)
 S3method(augment,tune_results)
@@ -61,9 +64,6 @@ S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
-S3method(performance_case_weights,default)
-S3method(performance_case_weights,hardhat_frequency_weights)
-S3method(performance_case_weights,hardhat_importance_weights)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
@@ -119,6 +119,7 @@ export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
+export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
 export(check_initial)
@@ -179,7 +180,6 @@ export(min_grid.rule_fit)
 export(new_iteration_results)
 export(outcome_names)
 export(parameters)
-export(performance_case_weights)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
