--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,24 +17,24 @@ BugReports: https://github.com/tidymodels/tune/issues
 Depends:
     R (>= 3.4)
 Imports:
-    cli (>= 2.0.0),
+    cli (>= 3.3.0),
     dials (>= 0.0.10),
-    dplyr (>= 1.0.0),
+    dplyr (>= 1.0.8),
     foreach,
     generics (>= 0.1.2),
     ggplot2,
-    glue,
+    glue (>= 1.6.2),
     GPfit,
     hardhat (>= 0.2.0),
     lifecycle (>= 1.0.0),
     parsnip (>= 0.2.0),
     purrr (>= 0.3.2),
     recipes (>= 0.2.0),
-    rlang (>= 0.4.0),
+    rlang (>= 1.0.2),
     rsample (>= 0.0.9),
     tibble (>= 3.1.0),
-    tidyr,
-    vctrs (>= 0.3.0),
+    tidyr (>= 1.2.0),
+    vctrs (>= 0.4.1),
     withr,
     workflows (>= 0.2.5),
     yardstick (>= 0.0.7)
