--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Imports:
     rsample (>= 0.0.9),
     tibble (>= 3.1.0),
     tidyr (>= 1.2.0),
+    tidyselect (>= 1.1.2),
     vctrs (>= 0.4.1),
     withr,
     workflows (>= 0.2.6.9001),
