--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method("names<-",iteration_results)
 S3method("names<-",resample_results)
 S3method("names<-",tune_results)
 S3method(.get_fingerprint,tune_results)
+S3method(.use_case_weights_with_yardstick,default)
+S3method(.use_case_weights_with_yardstick,hardhat_frequency_weights)
+S3method(.use_case_weights_with_yardstick,hardhat_importance_weights)
 S3method(augment,last_fit)
 S3method(augment,resample_results)
 S3method(augment,tune_results)
@@ -116,6 +119,7 @@ export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
+export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
 export(check_initial)
