make select_by_pct_loss generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,8 @@ S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(select_by_one_std_err,default)
 S3method(select_by_one_std_err,tune_results)
+S3method(select_by_pct_loss,default)
+S3method(select_by_pct_loss,tune_results)
 S3method(size_sum,tune_results)
 S3method(tune_bayes,default)
 S3method(tune_bayes,model_spec)
