make select_generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,8 @@ S3method(print,control_grid)
 S3method(print,control_last_fit)
 S3method(print,prob_improve)
 S3method(print,tune_results)
+S3method(select_best,default)
+S3method(select_best,tune_results)
 S3method(select_by_one_std_err,default)
 S3method(select_by_one_std_err,tune_results)
 S3method(select_by_pct_loss,default)
