--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,8 @@ S3method(select_by_one_std_err,default)
 S3method(select_by_one_std_err,tune_results)
 S3method(select_by_pct_loss,default)
 S3method(select_by_pct_loss,tune_results)
+S3method(show_best,default)
+S3method(show_best,tune_results)
 S3method(size_sum,tune_results)
 S3method(tune_bayes,default)
 S3method(tune_bayes,model_spec)
