--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,9 @@ S3method(vec_ptype2,tune_results.tune_results)
 S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
+export(.catch_and_log)
+export(.catch_and_log_fit)
+export(.estimate_metrics)
 export(.get_fingerprint)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
@@ -127,6 +130,7 @@ export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
+export(.load_namespace)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
