export finalize_workflow_preprocessor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
+export(finalize_workflow_preprocessor)
 export(fit_max_value)
 export(fit_resamples)
 export(get_tune_colors)
