--- a/NAMESPACE
+++ b/NAMESPACE
@@ -170,6 +170,7 @@ export(finalize_workflow)
 export(finalize_workflow_preprocessor)
 export(fit_max_value)
 export(fit_resamples)
+export(forge_from_workflow)
 export(get_tune_colors)
 export(is_preprocessor)
 export(is_recipe)
