update dplyr::one_of to dplyr::all_of in R files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,7 +234,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,last)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
-importFrom(dplyr,one_of)
+importFrom(dplyr,all_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,sample_n)
