--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
+export(show_notes)
 export(tunable)
 export(tune)
 export(tune_args)
@@ -221,6 +222,7 @@ importFrom(dials,is_unknown)
 importFrom(dials,parameters)
 importFrom(dials,parameters_constr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
@@ -234,7 +236,6 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,last)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
-importFrom(dplyr,all_of)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,sample_n)
