--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -46,6 +46,7 @@ reference:
     - starts_with("collect")
     - filter_parameters
     - show_best
+    - show_notes
     - starts_with("select_")
     - starts_with("extract_")
     - starts_with("finalize")
