--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
 export(.load_namespace)
+export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
