--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -53,6 +53,7 @@ reference:
     - coord_obs_pred
     - conf_mat_resampled
     - example_ames_knn
+    - show_notes
   - title: Developer functions
     contents:
     - merge.recipe
