--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,15 +47,11 @@ Suggests:
     spelling,
     testthat (>= 3.0.0),
     xml2
-Config/Needs/website:
-    pkgdown,
-    tidymodels,
-    kknn,
-    doParallel,
+Config/Needs/website:pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0.9000
-Config/testthat/edition: 3
