--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ S3method(collect_metrics,tune_results)
 S3method(collect_notes,default)
 S3method(collect_notes,tune_results)
 S3method(collect_predictions,default)
+S3method(collect_predictions,tune_race)
 S3method(collect_predictions,tune_results)
 S3method(extract_fit_engine,tune_results)
 S3method(extract_fit_parsnip,tune_results)
@@ -79,6 +80,7 @@ S3method(select_by_one_std_err,tune_results)
 S3method(select_by_pct_loss,default)
 S3method(select_by_pct_loss,tune_results)
 S3method(show_best,default)
+S3method(show_best,tune_race)
 S3method(show_best,tune_results)
 S3method(size_sum,tune_results)
 S3method(tune_bayes,default)
