--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ export(augment)
 export(autoplot)
 export(check_initial)
 export(check_metrics)
+export(check_parameters)
 export(check_rset)
 export(check_time)
 export(check_workflow)
