put backend options in control functions and export `new_backend_options()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -192,6 +192,7 @@ export(min_grid.nearest_neighbor)
 export(min_grid.pls)
 export(min_grid.poisson_reg)
 export(min_grid.rule_fit)
+export(new_backend_options)
 export(new_iteration_results)
 export(outcome_names)
 export(parameters)
