--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,4 +56,4 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0.9000
 Remotes:  
-    tidymodels/parsnip@control_control
+    tidymodels/parsnip
