--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ S3method(augment,resample_results)
 S3method(augment,tune_results)
 S3method(autoplot,resample_results)
 S3method(autoplot,tune_results)
+S3method(collect_extracts,default)
+S3method(collect_extracts,tune_results)
 S3method(collect_metrics,default)
 S3method(collect_metrics,tune_results)
 S3method(collect_notes,default)
@@ -140,6 +142,7 @@ export(check_parameters)
 export(check_rset)
 export(check_time)
 export(check_workflow)
+export(collect_extracts)
 export(collect_metrics)
 export(collect_notes)
 export(collect_predictions)
