--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ export(collect_notes)
 export(collect_predictions)
 export(conf_bound)
 export(conf_mat_resampled)
+export(config_key_from_metrics)
 export(control_bayes)
 export(control_grid)
 export(control_last_fit)
