add a dot to the name of a devel function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
 export(.catch_and_log_fit)
+export(.config_key_from_metrics)
 export(.estimate_metrics)
 export(.get_fingerprint)
 export(.get_tune_metric_names)
@@ -148,7 +149,6 @@ export(collect_notes)
 export(collect_predictions)
 export(conf_bound)
 export(conf_mat_resampled)
-export(config_key_from_metrics)
 export(control_bayes)
 export(control_grid)
 export(control_last_fit)
