import cli machinery

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,11 +217,15 @@ export(val_class_or_null)
 import(vctrs)
 import(workflows)
 importFrom(GPfit,GP_fit)
+importFrom(cli,cli_abort)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_message)
+importFrom(cli,cli_warn)
+importFrom(cli,qty)
 importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,parameters)
