correct cli import name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,7 +223,7 @@ importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_message)
+importFrom(cli,cli_inform)
 importFrom(cli,cli_warn)
 importFrom(cli,qty)
 importFrom(dials,encode_unit)
