--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,7 @@ S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
 export(.catch_and_log)
 export(.catch_and_log_fit)
+export(.config_key_from_metrics)
 export(.estimate_metrics)
 export(.get_fingerprint)
 export(.get_tune_metric_names)
