--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ S3method(extract_recipe,tune_results)
 S3method(extract_spec_parsnip,tune_results)
 S3method(extract_workflow,last_fit)
 S3method(extract_workflow,tune_results)
+S3method(fit_best,default)
+S3method(fit_best,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
@@ -173,6 +175,7 @@ export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
 export(finalize_workflow_preprocessor)
+export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
