--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
 export(get_tune_colors)
+export(initialize_catalog)
 export(is_preprocessor)
 export(is_recipe)
 export(is_workflow)
