--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,8 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost,
     xml2
+remotes:
+    tidymodels/yardstick#347
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
