--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,8 +57,6 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-remotes: 
-    tidymodels/yardstick#347,
-    r-lib/rlang
+Remotes: tidymodels/yardstick#347, r-lib/rlang
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
