apply suggestions from code review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -327,6 +327,7 @@ importFrom(tibble,size_sum)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(yardstick,accuracy)
+importFrom(yardstick,brier_survival)
 importFrom(yardstick,rmse)
 importFrom(yardstick,roc_auc)
 importFrom(yardstick,rsq)
