--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,8 @@ export(.get_tune_parameters)
 export(.get_tune_workflow)
 export(.load_namespace)
 export(.stash_last_result)
+export(.survival_weights_graf)
+export(.survival_weights_roc)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
