add a function to compute new metrics from tuning results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(collect_notes,default)
 S3method(collect_notes,tune_results)
 S3method(collect_predictions,default)
 S3method(collect_predictions,tune_results)
+S3method(compute_metrics,default)
+S3method(compute_metrics,tune_results)
 S3method(extract_fit_engine,tune_results)
 S3method(extract_fit_parsnip,tune_results)
 S3method(extract_mold,tune_results)
@@ -149,6 +151,7 @@ export(collect_extracts)
 export(collect_metrics)
 export(collect_notes)
 export(collect_predictions)
+export(compute_metrics)
 export(conf_bound)
 export(conf_mat_resampled)
 export(control_bayes)
