error informatively when `predict()` is supplied tuning results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,7 +69,9 @@ S3method(parameters,recipe)
 S3method(parameters,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
+S3method(predict,last_fit)
 S3method(predict,prob_improve)
+S3method(predict,tune_results)
 S3method(pretty,tune_results)
 S3method(print,control_grid)
 S3method(print,control_last_fit)
