add `model_fit` method for `last_fit()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
 S3method(last_fit,default)
+S3method(last_fit,model_fit)
 S3method(last_fit,model_spec)
 S3method(last_fit,workflow)
 S3method(load_pkgs,character)
