--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ export(.catch_and_log)
 export(.catch_and_log_fit)
 export(.config_key_from_metrics)
 export(.estimate_metrics)
+export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
@@ -184,6 +185,7 @@ export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
+export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
 export(is_preprocessor)
