add helper for bridging causal fits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ S3method(vec_ptype2,tune_results.tune_results)
 S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
+S3method(weight_propensity,tune_results)
 export(.catch_and_log)
 export(.catch_and_log_fit)
 export(.config_key_from_metrics)
@@ -295,6 +296,7 @@ importFrom(hardhat,extract_workflow)
 importFrom(hardhat,tune)
 importFrom(parsnip,get_from_env)
 importFrom(parsnip,required_pkgs)
+importFrom(parsnip,weight_propensity)
 importFrom(purrr,map_int)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
