--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tune
 Title: Tidy Tuning Tools
-Version: 1.1.1.9000
+Version: 1.1.1.9001
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
@@ -27,7 +27,7 @@ Imports:
     GPfit,
     hardhat (>= 1.2.0),
     lifecycle (>= 1.0.0),
-    parsnip (>= 1.0.2),
+    parsnip (>= 1.1.0.9001),
     purrr (>= 1.0.0),
     recipes (>= 1.0.4),
     rlang (>= 1.0.2),
@@ -37,7 +37,7 @@ Imports:
     tidyselect (>= 1.1.2),
     vctrs (>= 0.6.1),
     withr,
-    workflows (>= 1.0.0),
+    workflows (>= 1.1.3.9001),
     yardstick (>= 1.0.0)
 Suggests: 
     C50,
@@ -50,6 +50,9 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost,
     xml2
+Remotes:
+    tidymodels/parsnip#955,
+    tidymodels/workflows#199
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
