--- a/NAMESPACE
+++ b/NAMESPACE
@@ -319,6 +319,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rsample,.get_fingerprint)
 importFrom(stats,dnorm)
+importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
