incorporate an evaluation time argument for censored regression (#619)
* initial version

* typo

* docs

* bug fix

* added notes on call stack, template for new code

* An an 'eval_times' argument to tuning functions

* remove ipcw for first PR

* default metrics for survival models

* unit tests for user-facing functions

* small updates

* namespaces and updated snapshots

* more eval_time handling

* 86 the browser

* doc and function updates

* bump dplyr version to current

* update rlang version to avoid bad snapshot link for a week or so

* Capital R remotes

* rlang::flatten -> purrr::list_flatten

* `expect_snapshot_error()` -> `expect_snapshot(error = TRUE)`

* apply suggestions from code review

* time arg also needed for last_fit

* {eval_times, stat_times, .time} -> eval_time

* no infinities allowed

* eval time filtering now in parsnip

* times -> eval_time

* add ipcw and initial performance function

* updates based on tidymodels/parsnip#937

* updates based on tidymodels/parsnip#937

* some initial collect metrics work

* added a todo

* select updates

* more updates to selection/show methods

* add eval_times

* modularize median evaluation time code

* choose an eval_time for plots

* passing eval_time through to tune bayes

* re-nest prototype

* setup metric_set calculations

* changes for integrated_survival_metric

* changes for integrated metrics

* pass eval_time to tune machinery

* fix check for eval_time

* another integrated score update

* draft documentation to eventually go somewhere else

* fix time check

* namespace as_tibble

* misc edits

* print out the data, for folks who aren't familiar
* clarify data prep verbiage
* convert to tibble a bit earlier
* transition `bind_rows(map_dfc())` -> `slice()`
* use consistent punctuation before code chunks

* edits

- use `slice_sample()` instead of artisanal version
- add clarificati

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tune
 Title: Tidy Tuning Tools
-Version: 1.1.1.9000
+Version: 1.1.1.9001
 Authors@R: c(
     person("Max", "Kuhn", , "max@posit.co", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
@@ -19,7 +19,7 @@ Depends:
 Imports:
     cli (>= 3.3.0),
     dials (>= 1.0.0),
-    dplyr (>= 1.0.8),
+    dplyr (>= 1.1.0),
     foreach,
     generics (>= 0.1.2),
     ggplot2,
@@ -27,10 +27,10 @@ Imports:
     GPfit,
     hardhat (>= 1.2.0),
     lifecycle (>= 1.0.0),
-    parsnip (>= 1.0.2),
+    parsnip (>= 1.0.4.9006),
     purrr (>= 1.0.0),
     recipes (>= 1.0.4),
-    rlang (>= 1.0.2),
+    rlang (>= 1.1.0),
     rsample (>= 1.0.0),
     tibble (>= 3.1.0),
     tidyr (>= 1.2.0),
@@ -41,6 +41,7 @@ Imports:
     yardstick (>= 1.0.0)
 Suggests: 
     C50,
+    censored,
     covr,
     kernlab,
     kknn,
