--- a/NAMESPACE
+++ b/NAMESPACE
@@ -132,6 +132,7 @@ export(.catch_and_log)
 export(.catch_and_log_fit)
 export(.config_key_from_metrics)
 export(.estimate_metrics)
+export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
@@ -185,6 +186,7 @@ export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
 export(forge_from_workflow)
+export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
 export(is_preprocessor)
@@ -317,6 +319,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rsample,.get_fingerprint)
 importFrom(stats,dnorm)
+importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
@@ -332,6 +335,7 @@ importFrom(tibble,size_sum)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(yardstick,accuracy)
+importFrom(yardstick,brier_survival)
 importFrom(yardstick,rmse)
 importFrom(yardstick,roc_auc)
 importFrom(yardstick,rsq)
