initial pivot code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
+S3method(pivot_metrics,tune_results)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,last_fit)
@@ -212,6 +213,7 @@ export(new_backend_options)
 export(new_iteration_results)
 export(outcome_names)
 export(parameters)
+export(pivot_metrics)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
