--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,9 @@ S3method(tune_bayes,workflow)
 S3method(tune_grid,default)
 S3method(tune_grid,model_spec)
 S3method(tune_grid,workflow)
+S3method(tune_nested,default)
+S3method(tune_nested,model_spec)
+S3method(tune_nested,workflow)
 S3method(vec_cast,data.frame.iteration_results)
 S3method(vec_cast,data.frame.resample_results)
 S3method(vec_cast,data.frame.tune_results)
@@ -225,6 +228,7 @@ export(tune)
 export(tune_args)
 export(tune_bayes)
 export(tune_grid)
+export(tune_nested)
 export(val_class_and_single)
 export(val_class_or_null)
 import(vctrs)
