--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ S3method(fit_best,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
+S3method(int_pctl_metrics,tune_results)
 S3method(last_fit,default)
 S3method(last_fit,model_fit)
 S3method(last_fit,model_spec)
@@ -189,6 +190,7 @@ export(forge_from_workflow)
 export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
+export(int_pctl_metrics)
 export(is_preprocessor)
 export(is_recipe)
 export(is_workflow)
