--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
+S3method(pivot_metrics,last_fit)
 S3method(pivot_metrics,tune_results)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
