--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,7 +55,7 @@ reference:
     - coord_obs_pred
     - conf_mat_resampled
     - example_ames_knn
-    - int_pctl
+    - starts_with("int_pctl")
   - title: Developer functions
     contents:
     - merge.recipe
