Bootstrap intervals for performance metrics (#688)
* initial work on percentile intervals

* docs

* more documentation

* use vctrs::s3_register instead

* docs, unit tests, and misc

* pkgdown entry

* fix a bug related to iterative methods

* method for using current rsample

* method for using current rsample

* news update

* small updates

* update R requirements

* dependency needs R >= 4.0

* Apply suggestions from code review

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* constrain R version due to dependency issues

* remove comment

* inherit docs where possible

* throw a warning when eval_time is used unnecessarily

* spelling update

* doc update + no map_dfr()

* changes based on reviewer comments

* changes based on reviewer comments

* fixes for fit_resamples with dynamic survival metrics

* try using R 3.6 in GHA

* some deps need R >= 4.0

---------

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,6 +189,7 @@ export(forge_from_workflow)
 export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
+export(int_pctl.tune_results)
 export(is_preprocessor)
 export(is_recipe)
 export(is_workflow)
