--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ License: MIT + file LICENSE
 URL: https://tune.tidymodels.org/, https://github.com/tidymodels/tune
 BugReports: https://github.com/tidymodels/tune/issues
 Depends:
-    R (>= 3.4)
+    R (>= 4.0)
 Imports:
     cli (>= 3.3.0),
     dials (>= 1.0.0),
@@ -52,6 +52,7 @@ Suggests:
     xgboost,
     xml2
 Remotes:
+    tidymodels/rsample,
     tidymodels/yardstick#434
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
