rename and examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
+export(bootstrap_632)
 export(check_initial)
 export(check_metrics)
 export(check_parameters)
