--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,9 @@ S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
 S3method(parameters,workflow)
+S3method(pilot_tune_grid,default)
+S3method(pilot_tune_grid,model_spec)
+S3method(pilot_tune_grid,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,last_fit)
@@ -213,6 +216,7 @@ export(new_backend_options)
 export(new_iteration_results)
 export(outcome_names)
 export(parameters)
+export(pilot_tune_grid)
 export(prob_improve)
 export(pull_rset_attributes)
 export(required_pkgs)
@@ -244,6 +248,7 @@ importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,parameters)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
@@ -256,6 +261,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,last)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
