simplify s3 registration in `.onLoad()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,9 @@ S3method(collect_predictions,default)
 S3method(collect_predictions,tune_results)
 S3method(compute_metrics,default)
 S3method(compute_metrics,tune_results)
+S3method(dplyr_reconstruct,iteration_results)
+S3method(dplyr_reconstruct,resample_results)
+S3method(dplyr_reconstruct,tune_results)
 S3method(extract_fit_engine,tune_results)
 S3method(extract_fit_parsnip,tune_results)
 S3method(extract_mold,tune_results)
@@ -38,6 +41,7 @@ S3method(fit_best,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
+S3method(int_pctl,tune_results)
 S3method(last_fit,default)
 S3method(last_fit,model_fit)
 S3method(last_fit,model_spec)
@@ -163,6 +167,7 @@ export(control_grid)
 export(control_last_fit)
 export(control_resamples)
 export(coord_obs_pred)
+export(dplyr_reconstruct)
 export(empty_ellipses)
 export(encode_set)
 export(estimate_tune_results)
@@ -189,7 +194,7 @@ export(forge_from_workflow)
 export(get_metric_time)
 export(get_tune_colors)
 export(initialize_catalog)
-export(int_pctl.tune_results)
+export(int_pctl)
 export(is_preprocessor)
 export(is_recipe)
 export(is_workflow)
@@ -252,6 +257,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,dplyr_reconstruct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
@@ -319,6 +325,7 @@ importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rsample,.get_fingerprint)
+importFrom(rsample,int_pctl)
 importFrom(stats,dnorm)
 importFrom(stats,median)
 importFrom(stats,model.frame)
