deduplicate package names in `check_installs()` output (#727)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -311,6 +311,7 @@ importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
+importFrom(rlang,caller_env)
 importFrom(rlang,env_get)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
