initial code for single selections

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ export(required_pkgs)
 export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
+export(select_eval_time)
 export(show_best)
 export(show_notes)
 export(tunable)
