adds eval_time as an attribute

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ export(.config_key_from_metrics)
 export(.estimate_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
+export(.get_tune_eval_times)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
 export(.get_tune_outcome_names)
