refactor for single time point and reset unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,8 @@ export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
+export(check_chosen_metric)
+export(check_eval_time)
 export(check_initial)
 export(check_metrics)
 export(check_parameters)
@@ -186,6 +188,8 @@ export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
 export(finalize_workflow_preprocessor)
+export(first_eval_time)
+export(first_metric)
 export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
@@ -223,7 +227,6 @@ export(required_pkgs)
 export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
-export(select_eval_time)
 export(show_best)
 export(show_notes)
 export(tunable)
