Tools for selecting a default evaluation time (#768)
* initial code for single selections

* added temp notes

* refactor for single time point and reset unit tests

* remove a function and add docs

* Apply suggestions from code review

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* update unit test and snapshots

---------

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,8 @@ export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
 export(finalize_workflow_preprocessor)
+export(first_eval_time)
+export(first_metric)
 export(fit_best)
 export(fit_max_value)
 export(fit_resamples)
