change function order for docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ export(check_parameters)
 export(check_rset)
 export(check_time)
 export(check_workflow)
+export(choose_metric)
 export(collect_extracts)
 export(collect_metrics)
 export(collect_notes)
