--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ export(check_parameters)
 export(check_rset)
 export(check_time)
 export(check_workflow)
+export(choose_eval_time)
 export(choose_metric)
 export(collect_extracts)
 export(collect_metrics)
@@ -184,6 +185,7 @@ export(extract_recipe)
 export(extract_spec_parsnip)
 export(extract_workflow)
 export(filter_parameters)
+export(filter_perf_metrics)
 export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
