argument checks for tune functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,8 +150,10 @@ export(.stash_last_result)
 export(.use_case_weights_with_yardstick)
 export(augment)
 export(autoplot)
+export(check_eval_time_arg)
 export(check_initial)
 export(check_metrics)
+export(check_metrics_arg)
 export(check_parameters)
 export(check_rset)
 export(check_time)
