Refactored functions to select single evaluation times (#778)
* move function to new file

* change function order for docs

* documentation start

* updates to the show/select functions

* updates to select/show functions

* updates for selecting eval times

* remove commented out code

* bug fix

* metric test cases

* add a survival model object

* note for next PR

* select/show test cases

* small set of direct tests

* update snapshot

* Apply suggestions from code review

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* Apply suggestions from code review

* updates from previous review

* small cli update

* doc update

* refresh snapshots

* modularize a check

* Remake with newest CRAN version of scales for #775

* Apply suggestions from code review

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* add dot when function is invoked

* add a warning for eval times with non-survival models

* go back to enquos

* rework warning text

* rework warning text pt 2

---------

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(.catch_and_log)
 export(.catch_and_log_fit)
 export(.config_key_from_metrics)
 export(.estimate_metrics)
+export(.filter_perf_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
 export(.get_tune_eval_times)
@@ -156,6 +157,7 @@ export(check_parameters)
 export(check_rset)
 export(check_time)
 export(check_workflow)
+export(choose_eval_time)
 export(choose_metric)
 export(collect_extracts)
 export(collect_metrics)
