--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ export(.estimate_metrics)
 export(.filter_perf_metrics)
 export(.get_extra_col_names)
 export(.get_fingerprint)
+export(.get_tune_eval_time_target)
 export(.get_tune_eval_times)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
