updates for new roxygen2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ S3method(predict,last_fit)
 S3method(predict,prob_improve)
 S3method(predict,tune_results)
 S3method(pretty,tune_results)
+S3method(print,control_bayes)
 S3method(print,control_grid)
 S3method(print,control_last_fit)
 S3method(print,prob_improve)
