--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/yardstick
+    tidymodels/yardstick,
+    tidymodels/parsnip
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
