export check_metric_in_tune_results for tidymodels/finetune#89

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,6 +155,7 @@ export(augment)
 export(autoplot)
 export(check_eval_time_arg)
 export(check_initial)
+export(check_metric_in_tune_results)
 export(check_metrics)
 export(check_metrics_arg)
 export(check_parameters)
