--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Imports:
     GPfit,
     hardhat (>= 1.2.0),
     lifecycle (>= 1.0.0),
-    parsnip (>= 1.0.4.9006),
+    parsnip (>= 1.1.1.9007),
     purrr (>= 1.0.0),
     recipes (>= 1.0.4),
     rlang (>= 1.1.0),
@@ -53,7 +53,8 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/yardstick
+    tidymodels/yardstick,
+    tidymodels/parsnip
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
