--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,6 +210,7 @@ export(is_recipe)
 export(is_workflow)
 export(last_fit)
 export(load_pkgs)
+export(maybe_choose_eval_time)
 export(message_wrap)
 export(metrics_info)
 export(min_grid)
