have iterative methods use integer x-axis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -301,6 +301,7 @@ importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
