--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Suggests:
     xgboost,
     xml2
 Remotes:
-    tidymodels/parsnip
+    tidymodels/parsnip,
+    tidymodels/censored
 Config/Needs/website: pkgdown, tidymodels, kknn, doParallel, doFuture,
     tidyverse/tidytemplate
 Config/testthat/edition: 3
