--- a/NAMESPACE
+++ b/NAMESPACE
@@ -356,6 +356,7 @@ importFrom(tibble,size_sum)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(yardstick,accuracy)
+importFrom(yardstick,brier_class)
 importFrom(yardstick,brier_survival)
 importFrom(yardstick,rmse)
 importFrom(yardstick,roc_auc)
